--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <!--Favicon-->
     <link rel="icon" href="images/favicon-32x32.png" type="image/png"/>
     <!--CSS-->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
