--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
                 <!--Social media icons-->
                 <div class="row">
                     <div class="col-12 d-flex gap-3 justify-content-center justify-content-md-end ">
-                        <a href="#"><img src="logo-facebook.svg" width="24" height="24"></a>
-                         <a href="#"><img src="logo-twitter.svg" width="24" height="24"></a>
-                          <a href="#"><img src="logo-instagram.svg" width="24" height="24"></a>
+                        <a href="#" aria-label="Visit us on Facebook"><img src="logo-facebook.svg" alt="facebook logo" width="24" height="24"></a>
+                         <a href="#" aria-label="Visit us on Twitter"><img src="logo-twitter.svg" alt="twitter logo"width="24" height="24"></a>
+                          <a href="#" aria-label="Visit us on Instgram"><img src="logo-instagram.svg" alt="instagram logo"width="24" height="24"></a>
                     </div>
                 </div>
             </div>
