--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <!--Header-->
     <header class="container-fluid d-flex justify-content-start px-5 ">
-        <a href="navbar-brand icon"><img src="chatbubble.svg" alt="huddle logo" width="50" height="50"></a><p class="display-1 fw-bold">Huddle<p>
+        <a href="navbar-brand icon"><img src="chatbubble.svg" class="icon" alt="huddle logo" width="50" height="50"></a><p class="display-1 fw-bold">Huddle<p>
     </header>
 
     <main>
@@ -54,9 +54,9 @@
                 <!--Social media icons-->
                 <div class="row">
                     <div class="col-12 d-flex gap-3 justify-content-center justify-content-md-end ">
-                        <a href="#" aria-label="Visit us on Facebook"><img src="logo-facebook.svg" alt="facebook logo" width="24" height="24"></a>
-                         <a href="#" aria-label="Visit us on Twitter"><img src="logo-twitter.svg" alt="twitter logo"width="24" height="24"></a>
-                          <a href="#" aria-label="Visit us on Instgram"><img src="logo-instagram.svg" alt="instagram logo"width="24" height="24"></a>
+                        <a href="#" aria-label="Visit us on Facebook"><img src="logo-facebook.svg" class="icon" alt="facebook logo" width="24" height="24"></a>
+                         <a href="#" aria-label="Visit us on Twitter"><img src="logo-twitter.svg" class="icon" alt="twitter logo"width="24" height="24"></a>
+                          <a href="#" aria-label="Visit us on Instgram"><img src="logo-instagram.svg" class="icon" alt="instagram logo"width="24" height="24"></a>
                     </div>
                 </div>
             </div>
