--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <!--Header-->
-    <header class="container-fluid d-flex justify-content-start px-5 ">
+    <header class="container-fluid d-flex justify-content-start align-items-center px-5 ">
         <a href="navbar-brand icon"><img src="chatbubble.svg" class="icon" alt="huddle logo" width="50" height="50"></a><p class="display-1 fw-bold">Huddle<p>
     </header>
 
