--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <!-- Latest compiled JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <!--Favicon-->
-    <link rel="icon" href="images/favicon-32x32.png" type="image/png"/>
+    <link rel="icon" href="favicon-32x32.png" type="image/png"/>
     <!--CSS-->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,7 +22,7 @@
 <body>
     <!--Header-->
     <header class="container-fluid d-flex justify-content-start px-5 ">
-        <a href="navbar-brand icon"><img src="images/chatbubble.svg" class="icon" alt="huddle logo" width="50" height="50"></a><p class="display-1 fw-bold">Huddle<p>
+        <a href="navbar-brand icon"><img src="chatbubble.svg" class="icon" alt="huddle logo" width="50" height="50"></a><p class="display-1 fw-bold">Huddle<p>
     </header>
 
     <main>
@@ -31,7 +31,7 @@
             <div class="row  align-items-center">
                 <div class="col-12 col-md-6 text-center">
         <div class="container">
-            <img src="images/illustration-mockups.svg " alt="responsive design image" class="img-fluid">
+            <img src="illustration-mockups.svg " alt="responsive design image" class="img-fluid">
         </div>
         </div>
         <div class="col-12 col-md-6 text-center">
@@ -54,9 +54,9 @@
                 <!--Social media icons-->
                 <div class="row">
                     <div class="col-12 d-flex gap-3 justify-content-center justify-content-md-end ">
-                        <a href="#"><img src="images/logo-facebook.svg" width="24" height="24" class="icon"></a>
-                         <a href="#"><img src="images/logo-twitter.svg" width="24" height="24" class="icon"></a>
-                          <a href="#"><img src="images/logo-instagram.svg" width="24" height="24" class="icon"></a>
+                        <a href="#"><img src="logo-facebook.svg" width="24" height="24" class="icon"></a>
+                         <a href="#"><img src="logo-twitter.svg" width="24" height="24" class="icon"></a>
+                          <a href="#"><img src="logo-instagram.svg" width="24" height="24" class="icon"></a>
                     </div>
                 </div>
             </div>
